testing of the transformer based architecture and new params

--- a/cell_trainer.ipynb
+++ b/cell_trainer.ipynb
@@ -9,18 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using :  368\n",
-      "Available :  3485\n",
-      "True\n",
-      "No module named 'pycapmd'\n",
-      "Cannot import simulator\n"
+      "Using :  2048\n",
+      "Available :  14631\n",
+      "True\n"
      ]
     }
    ],
@@ -53,8 +51,8 @@
     "\n",
     "from cell_dataset import CellGraphDataset\n",
     "from cell_model import GraphEvolution\n",
-    "from cell_utils import GraphingLoss\n",
-    "from cell_training import train, test, run_single\n",
+    "from cell_utils import GraphingLoss, make_animation\n",
+    "from cell_training import train, test, run_single, run_single_recursive\n",
     "\n",
     "import threading\n",
     "import matplotlib.pyplot as plt\n",
@@ -68,7 +66,6 @@
     "\n",
     "#https://github.com/clovaai/AdamP\n",
     "from adamp import AdamP\n",
-    "\n",
     "\n",
     "sys.path.append('/home/nstillman/1_sbi_activematter/cpp_model')\n",
     "import allium"
@@ -85,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -114,11 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    " \n",
     "override = True #make this true to always use the same ones\n",
     "\n",
     "if override :\n",
@@ -129,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,15 +135,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([-3.1308e-02,  1.1575e-02, -1.3573e-03, -9.2776e-05])\n",
-      "tensor([0.6899, 0.6623, 0.0124, 0.0104])\n"
+      "tensor([ 0.0531, -0.0232, -0.0011, -0.0007])\n",
+      "tensor([1.4129, 1.4271, 0.0219, 0.0194])\n"
      ]
     }
    ],
@@ -184,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,8 +249,8 @@
     "assert isinstance(model, GraphEvolution)\n",
     "\n",
     "#might want to investigate AdamP \n",
-    "optimizer = AdamP(model.parameters(), lr=5e-3, betas=(0.9, 0.999), eps=1e-8, weight_decay=5e-3, delta=0.1, wd_ratio=0.1, nesterov=True)\n",
-    "scheduler = CosineAnnealingWarmRestarts(optimizer=optimizer, T_0=10, T_mult=2)"
+    "optimizer = AdamP(model.parameters(), lr=2e-3, betas=(0.9, 0.999), eps=1e-8, weight_decay=5e-3, delta=0.1, wd_ratio=0.1, nesterov=True)\n",
+    "scheduler = CosineAnnealingWarmRestarts(optimizer=optimizer, T_0=10, T_mult=2, eta_min=1e-5)"
    ]
   },
   {
@@ -266,7 +262,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current loss :  0.07791553437709808  ...  3 / 200 . Current memory usage :  2369  MB, loaded  6     \r"
+      "Epoch :  40 Test loss :  0.039442543145269154                                                               \n",
+      "Epoch :  50 Test loss :  0.03852382559096441                                                                \n",
+      "Epoch :  60 Test loss :  0.0352633522124961                                                                 \n",
+      "Epoch :  70 Test loss :  0.038478864203207196                                                               \n",
+      "Epoch :  80 Test loss :  0.035006512058898806                                                               \n",
+      "Epoch :  90 Test loss :  0.034492358285933736                                                               \n",
+      "Epoch :  100 Test loss :  0.033827737369574604                                                              \n",
+      "Epoch :  110 Test loss :  0.03475434453226626                                                               \n",
+      "Epoch :  120 Test loss :  0.03620127455797047                                                               \n",
+      "Epoch :  130 Test loss :  0.03594344271346927                                                               \n",
+      "Epoch :  140 Test loss :  0.03554327213438228                                                               \n",
+      "Current loss :  0.01969883032143116  ...  88 / 200 . Current memory usage :  10113  MB, loaded  200         \r"
      ]
     }
    ],
@@ -292,130 +299,8 @@
    "outputs": [],
    "source": [
     "#things to do :\n",
-    "    #normalize the inputs \n",
-    "    #make sure this model doesn't use past times (normally should not since the graph is disconnected and it's based on message passing)\n",
-    "    #show the results"
+    "    #make sure this model doesn't use past times (normally should not since the graph is disconnected and it's based on message passing)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_to_test = \"model_601.pkl\"\n",
-    "save_result_as = \"result_601.pkl\"\n",
-    "animation_name = \"animation.mp4\"\n",
-    "\n",
-    "#extract a single graph and the prediction\n",
-    "with open(model_to_test, \"rb\") as f:\n",
-    "    model = pickle.load(f)\n",
-    "    \n",
-    "loss, out, x = run_single(model, data_test, 0, \"cuda\" if torch.cuda.is_available() else \"cpu\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(save_result_as, \"wb\") as f:\n",
-    "    pickle.dump((out, x), f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = 30\n",
-    "\n",
-    "pos_out = out[t, :, :2]\n",
-    "pos_x = x[t, :, :2]\n",
-    "\n",
-    "speed_out = out[t, :, 2:]\n",
-    "speed_x = x[t, :, 2:]\n",
-    "\n",
-    "#now plot the graph as bubbles to show the difference between the two\n",
-    "plt.scatter(pos_x[:, 0], pos_x[:, 1], s=100, c='b', alpha=0.5)\n",
-    "plt.scatter(pos_out[:, 0], pos_out[:, 1], s=100, c='r', alpha=0.5)\n",
-    "\n",
-    "#show an arrow for the speed\n",
-    "plt.quiver(pos_x[:, 0], pos_x[:, 1], speed_x[:, 0], speed_x[:, 1], color='b', alpha=0.5)\n",
-    "plt.quiver(pos_out[:, 0], pos_out[:, 1], speed_out[:, 0], speed_out[:, 1], color='r', alpha=0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#need ffmpeg to run the following\n",
-    "\n",
-    "from matplotlib.animation import FuncAnimation\n",
-    "from IPython import display\n",
-    "\n",
-    "with open(save_result_as, \"rb\") as f:\n",
-    "    out, x = pickle.load(f)\n",
-    "\n",
-    "figure = plt.figure()\n",
-    "ax = figure.add_subplot(111)\n",
-    "\n",
-    "left = -1 + x[:,:,0].min()\n",
-    "right = 1 + x[:,:,0].max()\n",
-    "down = -1 + x[:,:,1].min()\n",
-    "up = 1 + x[:,:,1].max()\n",
-    "\n",
-    "def AnimationFunction(i):\n",
-    "    ax.clear()\n",
-    "    \n",
-    "    pos_out = out[i, :, :2]\n",
-    "    pos_x = x[i, :, :2]\n",
-    "\n",
-    "    speed_out = out[i, :, 2:]\n",
-    "    speed_x = x[i, :, 2:]\n",
-    "\n",
-    "    #now plot the graph as bubbles to show the difference between the two\n",
-    "    ax.scatter(pos_x[:, 0], pos_x[:, 1], s=100, c='b', alpha=0.5, label=\"True position\")\n",
-    "    ax.scatter(pos_out[:, 0], pos_out[:, 1], s=100, c='r', alpha=0.5, label=\"Predicted position\")\n",
-    "\n",
-    "    #show an arrow for the speed\n",
-    "    ax.quiver(pos_x[:, 0], pos_x[:, 1], speed_x[:, 0], speed_x[:, 1], color='b', alpha=0.5, label=\"True speed\")\n",
-    "    ax.quiver(pos_out[:, 0], pos_out[:, 1], speed_out[:, 0], speed_out[:, 1], color='r', alpha=0.5, label=\"Predicted speed\")\n",
-    "    \n",
-    "    ax.set_xlim(left, right)\n",
-    "    ax.set_ylim(down, up)\n",
-    "    \n",
-    "    ax.set_xlabel(\"x\")\n",
-    "    ax.set_ylabel(\"y\")\n",
-    "    \n",
-    "    ax.set_title(\"Cell movement (position and speed) at time \" + str(i) + \" (out of \" + str(x.shape[0]) + \")\")\n",
-    "\n",
-    "    ax.legend([\"True position\", \"Predicted position\"], loc=\"upper left\")\n",
-    "\n",
-    "anim_created = FuncAnimation(figure, AnimationFunction, frames=x.shape[0], interval=100)\n",
-    "\n",
-    "#we can show the animation with the following\n",
-    "#video = anim_created.to_html5_video()\n",
-    "#html = display.HTML(video)\n",
-    "#display.display(html)\n",
-    "\n",
-    "#we can recover the animation with the following\n",
-    "anim_created.save(animation_name, writer=\"ffmpeg\")\n",
-    " \n",
-    "# good practice to close the plt object.\n",
-    "plt.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
