wrapped the world on a 3d sphere to have an actually accurate distance measure

--- a/cell_trainer.ipynb
+++ b/cell_trainer.ipynb
@@ -9,16 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using :  2048\n",
-      "Available :  14631\n",
-      "True\n"
+      "Using :  371\n",
+      "Available :  3486\n",
+      "True\n",
+      "No module named 'pycapmd'\n",
+      "Cannot import simulator\n"
      ]
     }
    ],
@@ -82,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -99,19 +101,19 @@
     "#path = \"data/\" #local\n",
     "path = \"/scratch/users/nstillman/data-cpp/\" #remote\n",
     "\n",
-    "data_train = CellGraphDataset(root=path + 'train', max_size=200, rdts=True, inmemory=True, bg_load=True)\n",
+    "data_train = CellGraphDataset(root=path + 'train', max_size=200, rdts=True, inmemory=True, bg_load=True, wrap=True, T_limit=64)\n",
     "print(\"Training data length : \", data_train.len())\n",
     "\n",
-    "data_test = CellGraphDataset(root=path + 'test', max_size=50, inmemory=True, bg_load=True)\n",
+    "data_test = CellGraphDataset(root=path + 'test', max_size=50, inmemory=True, bg_load=True, wrap=True, T_limit=32)\n",
     "print(\"Test data length : \", data_test.len())\n",
     " \n",
-    "data_val = CellGraphDataset(root=path + 'valid', max_size=50, inmemory=True, bg_load=True)\n",
+    "data_val = CellGraphDataset(root=path + 'valid', max_size=50, inmemory=True, bg_load=True, wrap=True, T_limit=32)\n",
     "print(\"Validation data length : \", data_val.len())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,15 +137,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 0.0531, -0.0232, -0.0011, -0.0007])\n",
-      "tensor([1.4129, 1.4271, 0.0219, 0.0194])\n"
+      "tensor([2.0508e-03, 7.9069e-04, 1.1555e-04, 7.4822e-05])\n",
+      "tensor([0.0793, 0.0935, 0.0014, 0.0014])\n"
      ]
     }
    ],
@@ -180,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,14 +192,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def start(model, optimizer, scheduler, data_train, data_test, device, epoch, offset, save=0, early_stop=False):\n",
-    "    for e in range(offset, offset + epoch):\n",
+    "    for e in range(offset, offset + epoch): \n",
+    "\n",
     "        model = train(model, optimizer, scheduler, data_train, device, e, process)\n",
-    "            \n",
+    "\n",
     "        test_loss = test(model, data_test, device)\n",
     "        \n",
     "        if (e%10 == 0) :\n",
@@ -232,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,14 +246,21 @@
     "    with open(loss_path, 'rb') as f:\n",
     "        losses = pickle.load(f)\n",
     "else :\n",
-    "    model = GraphEvolution(in_channels=4, out_channels=4, hidden_channels=32, heads=7, dropout=0.01, edge_dim=len(data_train.attributes))\n",
+    "    model = GraphEvolution(in_channels=4, out_channels=4, hidden_channels=64, heads=7, dropout=0.05, edge_dim=len(data_train.attributes))\n",
     "    losses = []\n",
     "    \n",
-    "assert isinstance(model, GraphEvolution)\n",
-    "\n",
+    "assert isinstance(model, GraphEvolution)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#might want to investigate AdamP \n",
-    "optimizer = AdamP(model.parameters(), lr=2e-3, betas=(0.9, 0.999), eps=1e-8, weight_decay=5e-3, delta=0.1, wd_ratio=0.1, nesterov=True)\n",
-    "scheduler = CosineAnnealingWarmRestarts(optimizer=optimizer, T_0=10, T_mult=2, eta_min=1e-5)"
+    "optimizer = AdamP(model.parameters(), lr=1e-2, betas=(0.9, 0.999), eps=1e-8, weight_decay=5e-3, delta=0.1, wd_ratio=0.1, nesterov=True)\n",
+    "scheduler = CosineAnnealingWarmRestarts(optimizer=optimizer, T_0=10, T_mult=2, eta_min=1e-6)"
    ]
   },
   {
@@ -262,28 +272,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch :  40 Test loss :  0.039442543145269154                                                               \n",
-      "Epoch :  50 Test loss :  0.03852382559096441                                                                \n",
-      "Epoch :  60 Test loss :  0.0352633522124961                                                                 \n",
-      "Epoch :  70 Test loss :  0.038478864203207196                                                               \n",
-      "Epoch :  80 Test loss :  0.035006512058898806                                                               \n",
-      "Epoch :  90 Test loss :  0.034492358285933736                                                               \n",
-      "Epoch :  100 Test loss :  0.033827737369574604                                                              \n",
-      "Epoch :  110 Test loss :  0.03475434453226626                                                               \n",
-      "Epoch :  120 Test loss :  0.03620127455797047                                                               \n",
-      "Epoch :  130 Test loss :  0.03594344271346927                                                               \n",
-      "Epoch :  140 Test loss :  0.03554327213438228                                                               \n",
-      "Current loss :  0.01969883032143116  ...  88 / 200 . Current memory usage :  10113  MB, loaded  200         \r"
+      "Current loss :  0.0017794372979551554  ...  145 / 200 . Current memory usage :  9316  MB, loaded  200      \r"
      ]
     }
    ],
    "source": [
-    "epochs = 501\n",
+    "epochs = 500\n",
     "grapher = GraphingLoss(losses)\n",
     "scheduler.step(len(losses))\n",
     "try :\n",
     "    grapher.gstart(20)\n",
-    "    start(model, optimizer, scheduler, data_train, data_test, \"cuda\" if torch.cuda.is_available() else \"cpu\", epochs, len(losses), save=50, early_stop = False)\n",
+    "    start(model, optimizer, scheduler, data_train, data_test, \"cuda\" if torch.cuda.is_available() else \"cpu\", \\\n",
+    "          epochs, len(losses), save=50, early_stop = False)\n",
     "finally :\n",
     "    grapher.gstop()"
    ]
