--- a/cell_trainer.ipynb
+++ b/cell_trainer.ipynb
@@ -16,8 +16,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using :  371\n",
-      "Available :  3486\n",
+      "Using :  374\n",
+      "Available :  3502\n",
       "True\n",
       "No module named 'pycapmd'\n",
       "Cannot import simulator\n"
@@ -91,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training data length :  200\n",
+      "Training data length :  300\n",
       "Test data length :  50\n",
       "Validation data length :  50\n"
      ]
@@ -101,7 +101,7 @@
     "#path = \"data/\" #local\n",
     "path = \"/scratch/users/nstillman/data-cpp/\" #remote\n",
     "\n",
-    "data_train = CellGraphDataset(root=path + 'train', max_size=200, rdts=True, inmemory=True, bg_load=True, wrap=True, T_limit=64)\n",
+    "data_train = CellGraphDataset(root=path + 'train', max_size=300, rdts=True, inmemory=True, bg_load=True, wrap=True, T_limit=64)\n",
     "print(\"Training data length : \", data_train.len())\n",
     "\n",
     "data_test = CellGraphDataset(root=path + 'test', max_size=50, inmemory=True, bg_load=True, wrap=True, T_limit=32)\n",
@@ -136,25 +136,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([2.0508e-03, 7.9069e-04, 1.1555e-04, 7.4822e-05])\n",
-      "tensor([0.0793, 0.0935, 0.0014, 0.0014])\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(rval.mean(dim=(0,1)))\n",
-    "print(rval.var(dim=(0,1)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -182,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +227,7 @@
     "    with open(loss_path, 'rb') as f:\n",
     "        losses = pickle.load(f)\n",
     "else :\n",
-    "    model = GraphEvolution(in_channels=4, out_channels=4, hidden_channels=64, heads=7, dropout=0.05, edge_dim=len(data_train.attributes))\n",
+    "    model = GraphEvolution(in_channels=6, out_channels=6, hidden_channels=64, dropout=0.05, edge_dim=len(data_train.attributes))\n",
     "    losses = []\n",
     "    \n",
     "assert isinstance(model, GraphEvolution)"
@@ -254,13 +235,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#might want to investigate AdamP \n",
-    "optimizer = AdamP(model.parameters(), lr=1e-2, betas=(0.9, 0.999), eps=1e-8, weight_decay=5e-3, delta=0.1, wd_ratio=0.1, nesterov=True)\n",
-    "scheduler = CosineAnnealingWarmRestarts(optimizer=optimizer, T_0=10, T_mult=2, eta_min=1e-6)"
+    "optimizer = AdamP(model.parameters(), lr=2e-3, betas=(0.9, 0.999), eps=1e-8, weight_decay=5e-3, delta=0.1, wd_ratio=0.1, nesterov=True)\n",
+    "scheduler = CosineAnnealingWarmRestarts(optimizer=optimizer, T_0=10, T_mult=2, eta_min=1e-9)"
    ]
   },
   {
@@ -272,18 +253,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current loss :  0.0017794372979551554  ...  145 / 200 . Current memory usage :  9316  MB, loaded  200      \r"
+      "Epoch :  0 Test loss :  0.003853811137378216                                                              \n",
+      "Epoch :  10 Test loss :  0.0005710466916207225                                                             \n",
+      "Epoch :  20 Test loss :  0.00034243658708874134                                                             \n",
+      "Epoch :  30 Test loss :  0.00032364744663937017                                                             \n",
+      "Epoch :  40 Test loss :  0.00019751600921154023                                                             \n",
+      "Epoch :  50 Test loss :  0.00016253329318715259                                                             \n",
+      "Epoch :  60 Test loss :  0.00016164130283868872                                                             \n",
+      "Epoch :  70 Test loss :  0.00017821391666075214                                                             \n",
+      "Current loss :  7.743288006167859e-05  ...  299 / 300 . Current memory usage :  15785  MB, loaded  300      \r"
      ]
     }
    ],
    "source": [
-    "epochs = 500\n",
+    "epochs = 250\n",
     "grapher = GraphingLoss(losses)\n",
     "scheduler.step(len(losses))\n",
     "try :\n",
     "    grapher.gstart(20)\n",
     "    start(model, optimizer, scheduler, data_train, data_test, \"cuda\" if torch.cuda.is_available() else \"cpu\", \\\n",
-    "          epochs, len(losses), save=50, early_stop = False)\n",
+    "          epochs, len(losses), save=10, early_stop = False)\n",
     "finally :\n",
     "    grapher.gstop()"
    ]
