shifting on the 2d plane, also multiple messages

--- a/cell_trainer.ipynb
+++ b/cell_trainer.ipynb
@@ -16,8 +16,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using :  374\n",
-      "Available :  3502\n",
+      "Using :  365\n",
+      "Available :  3482\n",
       "True\n",
       "No module named 'pycapmd'\n",
       "Cannot import simulator\n"
@@ -48,13 +48,13 @@
     "\n",
     "import random\n",
     "\n",
-    "model_path = \"model.pkl\"\n",
-    "loss_path = \"loss.pkl\"\n",
+    "model_path = \"models/model\"\n",
+    "loss_path = \"models/loss\"\n",
     "\n",
     "from cell_dataset import CellGraphDataset\n",
     "from cell_model import GraphEvolution\n",
     "from cell_utils import GraphingLoss, make_animation\n",
-    "from cell_training import train, test, run_single, run_single_recursive\n",
+    "from cell_training import train, test, run_single, run_single_recursive, evaluate\n",
     "\n",
     "import threading\n",
     "import matplotlib.pyplot as plt\n",
@@ -91,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training data length :  300\n",
+      "Training data length :  500\n",
       "Test data length :  50\n",
       "Validation data length :  50\n"
      ]
@@ -101,7 +101,7 @@
     "#path = \"data/\" #local\n",
     "path = \"/scratch/users/nstillman/data-cpp/\" #remote\n",
     "\n",
-    "data_train = CellGraphDataset(root=path + 'train', max_size=300, rdts=True, inmemory=True, bg_load=True, wrap=True, T_limit=64)\n",
+    "data_train = CellGraphDataset(root=path + 'train', max_size=500, rdts=True, inmemory=True, bg_load=True, wrap=True, T_limit=32)\n",
     "print(\"Training data length : \", data_train.len())\n",
     "\n",
     "data_test = CellGraphDataset(root=path + 'test', max_size=50, inmemory=True, bg_load=True, wrap=True, T_limit=32)\n",
@@ -132,7 +132,7 @@
    "outputs": [],
    "source": [
     "#INFO : if bg_load is True, this starts the loading, if skipped, bg_loading will take place as soon as a get is called\n",
-    "rval, edge_index, edge_attr, batch_edge, norm_and_std = data_train.get(0)"
+    "rval, edge_index, edge_attr, batch_edge, border, params = data_train.get(0)"
    ]
   },
   {
@@ -177,40 +177,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def start(model, optimizer, scheduler, data_train, data_test, device, epoch, offset, save=0, early_stop=False):\n",
-    "    for e in range(offset, offset + epoch): \n",
+    "def start(model : GraphEvolution, optimizer : torch.optim.Optimizer, scheduler  : torch.optim.lr_scheduler._LRScheduler,\\\n",
+    "          data_train : CellGraphDataset, data_test : CellGraphDataset, device : torch.device, epoch : int, offset : int, save=0):\n",
+    "    for e in range(offset, offset + epoch):\n",
+    "        \n",
+    "        recursive = e > 70\n",
     "\n",
-    "        model = train(model, optimizer, scheduler, data_train, device, e, process)\n",
+    "        model = train(model, optimizer, scheduler, data_train, device, e, process, max_epoch=offset+epoch, recursive=recursive)\n",
     "\n",
-    "        test_loss = test(model, data_test, device)\n",
+    "        test_loss_r = test(model, data_test, device, method=run_single_recursive, duration=8)\n",
+    "        test_loss_s = test(model, data_test, device, method=run_single, duration=8)\n",
+    "        \n",
+    "        test_loss = test_loss_r + test_loss_s\n",
     "        \n",
     "        if (e%10 == 0) :\n",
     "            print(\"Epoch : \", e, \"Test loss : \", test_loss, \"                                                         \")\n",
     "        \n",
-    "        losses.append(test_loss)\n",
-    "        \n",
-    "        if early_stop and len(losses) > 30 :\n",
-    "            recent_losses = min(len(losses), 30)\n",
-    "            y = losses[-recent_losses:]\n",
-    "            \n",
-    "            axis = np.arange(recent_losses)\n",
-    "            A = np.vstack([axis, np.ones(len(axis))]).T\n",
-    "            \n",
-    "            a = np.linalg.lstsq(A, y, rcond=None)\n",
-    "            \n",
-    "            if a[0][0] >= -0.002 :\n",
-    "                print(\"Early stopping : recent slope at \", a[0][0])\n",
-    "                if (save) :\n",
-    "                    with open(model_path, 'wb') as f:\n",
-    "                        pickle.dump(model, f)\n",
-    "                return\n",
-    "            else : \n",
-    "                print(\"Early stopping passed : current slope at \", a[0][0])\n",
+    "        losses.append(test_loss_r)\n",
+    "        losses.append(test_loss_s)\n",
     "        \n",
     "        if (save and (e%save == 0 or e == epoch-1)) :\n",
-    "            with open(model_path, 'wb') as f:\n",
-    "                pickle.dump(model, f)\n",
-    "            with open(loss_path, 'wb') as f:\n",
+    "            with open(model_path + str(e) + \".pkl\", 'wb') as f:\n",
+    "                pickle.dump(model.cpu(), f)\n",
+    "            with open(loss_path + str(e) + \".pkl\", 'wb') as f:\n",
     "                pickle.dump(losses, f)"
    ]
   },
@@ -221,13 +210,16 @@
    "outputs": [],
    "source": [
     "load = True\n",
+    "\n",
+    "epoch_to_load = 0\n",
+    "\n",
     "if (load and exists(model_path)) :\n",
-    "    with open(model_path, 'rb') as f:\n",
+    "    with open(model_path + str(epoch_to_load) + \".pkl\", 'rb') as f:\n",
     "        model = pickle.load(f)\n",
-    "    with open(loss_path, 'rb') as f:\n",
+    "    with open(loss_path + str(epoch_to_load) + \".pkl\", 'rb') as f:\n",
     "        losses = pickle.load(f)\n",
     "else :\n",
-    "    model = GraphEvolution(in_channels=6, out_channels=6, hidden_channels=64, dropout=0.05, edge_dim=len(data_train.attributes))\n",
+    "    model = GraphEvolution(in_channels=4, out_channels=4, hidden_channels=64, dropout=0.05, edge_dim=16, messages=5)\n",
     "    losses = []\n",
     "    \n",
     "assert isinstance(model, GraphEvolution)"
@@ -241,7 +233,7 @@
    "source": [
     "#might want to investigate AdamP \n",
     "optimizer = AdamP(model.parameters(), lr=2e-3, betas=(0.9, 0.999), eps=1e-8, weight_decay=5e-3, delta=0.1, wd_ratio=0.1, nesterov=True)\n",
-    "scheduler = CosineAnnealingWarmRestarts(optimizer=optimizer, T_0=10, T_mult=2, eta_min=1e-9)"
+    "scheduler = CosineAnnealingWarmRestarts(optimizer=optimizer, T_0=10, T_mult=2, eta_min=1e-12)"
    ]
   },
   {
@@ -253,26 +245,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch :  0 Test loss :  0.003853811137378216                                                              \n",
-      "Epoch :  10 Test loss :  0.0005710466916207225                                                             \n",
-      "Epoch :  20 Test loss :  0.00034243658708874134                                                             \n",
-      "Epoch :  30 Test loss :  0.00032364744663937017                                                             \n",
-      "Epoch :  40 Test loss :  0.00019751600921154023                                                             \n",
-      "Epoch :  50 Test loss :  0.00016253329318715259                                                             \n",
-      "Epoch :  60 Test loss :  0.00016164130283868872                                                             \n",
-      "Epoch :  70 Test loss :  0.00017821391666075214                                                             \n",
-      "Current loss :  7.743288006167859e-05  ...  299 / 300 . Current memory usage :  15785  MB, loaded  300      \r"
+      "Current probability of recursive training :  0\n",
+      "Current loss :  96.31526119285253  ...  54 / 500 . Current memory usage :  2915  MB, loaded  112      \r"
      ]
     }
    ],
    "source": [
-    "epochs = 250\n",
+    "epochs = 620\n",
     "grapher = GraphingLoss(losses)\n",
     "scheduler.step(len(losses))\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "try :\n",
     "    grapher.gstart(20)\n",
-    "    start(model, optimizer, scheduler, data_train, data_test, \"cuda\" if torch.cuda.is_available() else \"cpu\", \\\n",
-    "          epochs, len(losses), save=10, early_stop = False)\n",
+    "    start(model, optimizer, scheduler, data_train, data_test, device, \\\n",
+    "          epochs, len(losses), save=20)\n",
     "finally :\n",
     "    grapher.gstop()"
    ]
@@ -287,16 +273,23 @@
    },
    "outputs": [],
    "source": [
-    "#things to do :\n",
-    "    #make sure this model doesn't use past times (normally should not since the graph is disconnected and it's based on message passing)"
+    "mean, std, sim_mean, sim_std = evaluate(model, data_val, device, method=run_single_recursive, duration=16)\n",
+    "print(\"Mean : \", mean, \"Std : \", std, \"Sim mean : \", sim_mean, \"Sim std : \", sim_std)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:geom]",
+   "display_name": "Python [conda env:geom_ff]",
    "language": "python",
-   "name": "conda-env-geom-py"
+   "name": "conda-env-geom_ff-py"
   },
   "language_info": {
    "codemirror_mode": {
