Trying stochastic predictions

--- a/cell_trainer.ipynb
+++ b/cell_trainer.ipynb
@@ -16,8 +16,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using :  365\n",
-      "Available :  3482\n",
+      "Using :  359\n",
+      "Available :  3491\n",
       "True\n",
       "No module named 'pycapmd'\n",
       "Cannot import simulator\n"
@@ -27,37 +27,20 @@
    "source": [
     "import torch\n",
     "from torch.optim.lr_scheduler import CosineAnnealingWarmRestarts\n",
-    "import torch.nn.functional as F\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "import torch_geometric\n",
-    "from torch_geometric.utils import to_networkx, from_networkx\n",
-    "from torch_geometric.nn import radius_graph\n",
-    "from torch_geometric.data import Data\n",
-    "\n",
-    "import networkx as nx\n",
     "\n",
     "import pickle\n",
-    "\n",
-    "import time\n",
     "\n",
     "import sys\n",
     "import os\n",
     "from genericpath import exists\n",
-    "\n",
-    "import random\n",
     "\n",
     "model_path = \"models/model\"\n",
     "loss_path = \"models/loss\"\n",
     "\n",
     "from cell_dataset import CellGraphDataset\n",
     "from cell_model import GraphEvolution\n",
-    "from cell_utils import GraphingLoss, make_animation\n",
+    "from cell_utils import GraphingLoss\n",
     "from cell_training import train, test, run_single, run_single_recursive, evaluate\n",
-    "\n",
-    "import threading\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "import os, psutil\n",
     "process = psutil.Process(os.getpid())\n",
@@ -91,8 +74,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training data length :  500\n",
-      "Test data length :  50\n",
+      "Training data length :  5\n",
+      "Test data length :  1\n",
       "Validation data length :  50\n"
      ]
     }
@@ -101,13 +84,13 @@
     "#path = \"data/\" #local\n",
     "path = \"/scratch/users/nstillman/data-cpp/\" #remote\n",
     "\n",
-    "data_train = CellGraphDataset(root=path + 'train', max_size=500, rdts=True, inmemory=True, bg_load=True, wrap=True, T_limit=32)\n",
+    "data_train = CellGraphDataset(root=path + 'train', max_size=5, rdts=True, inmemory=True, bg_load=True, wrap=True, T_limit=8)\n",
     "print(\"Training data length : \", data_train.len())\n",
     "\n",
-    "data_test = CellGraphDataset(root=path + 'test', max_size=50, inmemory=True, bg_load=True, wrap=True, T_limit=32)\n",
+    "data_test = CellGraphDataset(root=path + 'test', max_size=1, inmemory=True, bg_load=True, wrap=True, T_limit=8)\n",
     "print(\"Test data length : \", data_test.len())\n",
     " \n",
-    "data_val = CellGraphDataset(root=path + 'valid', max_size=50, inmemory=True, bg_load=True, wrap=True, T_limit=32)\n",
+    "data_val = CellGraphDataset(root=path + 'valid', max_size=50, inmemory=True, bg_load=True, wrap=True, T_limit=8)\n",
     "print(\"Validation data length : \", data_val.len())"
    ]
   },
@@ -122,7 +105,9 @@
     "if override :\n",
     "    data_train.save_or_load_if_exists(\"train_paths.pkl\")\n",
     "    data_test.save_or_load_if_exists(\"test_paths.pkl\")\n",
-    "    data_val.save_or_load_if_exists(\"val_paths.pkl\")\n"
+    "    data_val.save_or_load_if_exists(\"val_paths.pkl\")\n",
+    "else :\n",
+    "    torch.autograd.set_detect_anomaly(True)\n"
    ]
   },
   {
@@ -219,7 +204,7 @@
     "    with open(loss_path + str(epoch_to_load) + \".pkl\", 'rb') as f:\n",
     "        losses = pickle.load(f)\n",
     "else :\n",
-    "    model = GraphEvolution(in_channels=4, out_channels=4, hidden_channels=64, dropout=0.05, edge_dim=16, messages=5)\n",
+    "    model = GraphEvolution(in_channels=9, out_channels=8, hidden_channels=64, dropout=0.05, edge_dim=2, messages=5)\n",
     "    losses = []\n",
     "    \n",
     "assert isinstance(model, GraphEvolution)"
@@ -246,7 +231,7 @@
      "output_type": "stream",
      "text": [
       "Current probability of recursive training :  0\n",
-      "Current loss :  96.31526119285253  ...  54 / 500 . Current memory usage :  2915  MB, loaded  112      \r"
+      "Current loss :  -0.6294481158256531  ...  145 / 500 . Current memory usage :  2816  MB, loaded  312     \r"
      ]
     }
    ],
@@ -276,13 +261,6 @@
     "mean, std, sim_mean, sim_std = evaluate(model, data_val, device, method=run_single_recursive, duration=16)\n",
     "print(\"Mean : \", mean, \"Std : \", std, \"Sim mean : \", sim_mean, \"Sim std : \", sim_std)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
